# SR_DATA_MAKER

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
configs/examples/: batch_diffusion_teachers_down_half_up_restore_sr_hr_img5.yaml  batch_diffusion_teachers_down_quarter_up_restore_sr_hr_img5.yaml  down_half_up_restore_sr_hr_img5_resshift.yaml  down_half_up_restore_sr_hr_img5_stablesr.yaml  down_quarter_up_restore_sr_hr_img5_resshift.yaml  down_quarter_up_restore_sr_hr_img5_stablesr.yaml  down_quarter_up_restore_sr_hr_img5_supir.yaml  local_codeformer_x2.yaml  local_gfpgan_x2.yaml  local_hat_x2.yaml  local_realesrgan_x2.yaml  local_resshift_x4.yaml  local_resshift_x4_realtest.yaml  local_resshift_x4_realtest_lowmem.yaml  local_stablesr_x4.yaml  local_stablesr_x4_realtest_lowmem.yaml  local_supir_x4.yaml  local_supir_x4_realtest_lowmem.yaml  sr_mixed_v1.yaml  (+14 more)
docs/: face-datasets-china-focused.md  face-datasets-china-focused.zh-CN.md
scripts/: check_plant_teacher_status.ps1  collect_style_diverse_plants.py  collect_telephoto_special.py  run_plant_teacher_models.ps1  run_single_teacher_with_resume.ps1
tests/: test_classical_degradation.py  test_cli_import.py  test_config.py  test_dataset_writer.py  test_diffusion_teacher_runners.py  test_diffusion_teacher_setup.py  test_executor_cli.py  test_face_teacher_runners.py  test_face_teacher_setup.py  test_generators.py  test_package_import.py  test_pytorch_teacher_adapters.py  test_pytorch_teacher_setup.py  test_realesrgan_repo_resolution.py  test_realesrgan_runner.py  test_realesrgan_setup.py  test_source_reader.py
(+48 files in other folders)
