[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-data-maker"
version = "0.1.0"
description = "YAML-driven super-resolution training data generation toolkit."
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
sr-data-maker = "sr_data_maker.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
