[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-data-maker"
version = "0.1.0"
description = "YAML-driven super-resolution training data generation toolkit."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
realesrgan = [
  "basicsr>=1.4.2",
  "realesrgan>=0.3.0",
]

[project.scripts]
sr-data-maker = "sr_data_maker.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
